--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -11,6 +11,7 @@
     
 }
 
+
  .sidebar {
       height: 100vh;
       width: 250px;
@@ -20,6 +21,8 @@
       background-color: var(--background-color);
       color: white;
       padding-top: 20px;
+     
+      
     }
     .sidebar a {
       color: white;
@@ -34,6 +37,7 @@
     .content {
       margin-left: 250px;
       padding: 20px;
+      
       
     }
     .profile-section {
@@ -51,4 +55,15 @@
     }
     .profile-section p {
       color: #aaa;
+    }
+    .card-button{
+        background-color: var(--button-color);
+        padding: 10px;
+        color: #fff;
+        text-decoration: none;
+    }
+    .profile-section img{
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
     }
